--- a/index.html
+++ b/index.html
@@ -392,6 +392,37 @@
         </div>
     </div>
 
+    <!-- FAQ and Contact Us Section -->
+    <div class="faq">
+        <h3>FAQ</h3>
+        <p><span>Q:</span> How long does it take to get my order?<br>
+        <span>A:</span> Most orders are processed and shipped within 48 hours. Larger orders may take up to 5 days.</p>
+        <p><span>Q:</span> What file formats can I upload for my designs?<br>
+        <span>A:</span> We accept JPG, PNG, and PDF files for printing. Make sure your images are high-resolution for the best results.</p>
+        <p><span>Q:</span> Can I make changes to my order after placing it?<br>
+        <span>A:</span> Yes, we can make adjustments as long as the order hasn’t been processed yet. Contact us immediately for any changes.</p>
+        <p><span>Q:</span> Do you offer bulk discounts?<br>
+        <span>A:</span> Yes, we offer discounts for bulk orders. Please contact us for pricing details.</p>
+        <p><span>Q:</span> Are your products eco-friendly?<br>
+        <span>A:</span> Yes, we use sustainable materials whenever possible, and our printing processes are designed to minimize waste.</p>
+    </div>
+
+    <div class="contact">
+        <h3>Contact Us</h3>
+        <p><span>Address:</span><br>
+        Unit 12, Creative Tower<br>
+        124 EDSA Extension, Greenhills<br>
+        San Juan City, 1503 Metro Manila<br>
+        Philippines</p>
+        <p><span>Phone:</span><br>
+        +63 2 7990 4420</p>
+        <p><span>Email:</span><br>
+        <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a></p>
+        <p><span>Business Hours:</span><br>
+        Monday – Friday: 9:00 AM – 6:00 PM<br>
+        Saturday – Sunday: Closed</p>
+    </div>
+
     <div class="cart">
         <h3>Your Cart <span class="cart-count">0</span></h3>
         <ul id="cart-items"></ul>
