--- a/index.html
+++ b/index.html
@@ -257,6 +257,37 @@
         #testimonial-slider {
             transition: transform 0.5s ease;
         }
+
+        /* FAQ and Contact Us */
+        .faq, .contact {
+            background-color: #fff;
+            padding: 30px;
+            margin: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .faq h3, .contact h3 {
+            font-size: 1.8em;
+            margin-bottom: 15px;
+            color: #155824;
+        }
+
+        .faq p, .contact p {
+            font-size: 1.1em;
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        .faq p span, .contact p span {
+            font-weight: bold;
+            color: #155824;
+        }
+
+        .faq, .contact {
+            max-width: 900px;
+            margin: auto;
+        }
     </style>
 </head>
 <body>
@@ -381,17 +412,6 @@
         </div>
     </div>
 
-    <div class="testimonials">
-        <h2>TESTIMONIALS</h2>
-        <div id="testimonial-slider">
-            <p><em>“I love my custom t-shirt! The print quality is amazing, and the fit is perfect.”</em> — Carla M., Quezon City</p>
-            <p><em>“Marie Custom Goods made a beautiful canvas print for my office. It’s exactly what I envisioned!”</em> — John R., Pasig</p>
-            <p><em>“The custom mug I ordered is fantastic! The colors are vibrant and it’s the perfect gift for my friend. Highly recommend!”</em> — Maria L., Makati</p>
-            <p><em>“Fast shipping and high-quality prints. The custom phone case fits my phone perfectly, and I love the design. Will definitely order again!”</em> — Grace F., Quezon City</p>
-            <p><em>“I was looking for a personalized gift for my sister’s birthday, and the custom t-shirt from Marie Custom Goods was a huge hit! She loved it.”</em> — Joseph D., Parañaque</p>
-        </div>
-    </div>
-
     <!-- FAQ and Contact Us Section -->
     <div class="faq">
         <h3>FAQ</h3>
@@ -405,6 +425,17 @@
         <span>A:</span> Yes, we offer discounts for bulk orders. Please contact us for pricing details.</p>
         <p><span>Q:</span> Are your products eco-friendly?<br>
         <span>A:</span> Yes, we use sustainable materials whenever possible, and our printing processes are designed to minimize waste.</p>
+    </div>
+
+    <div class="testimonials">
+        <h2>TESTIMONIALS</h2>
+        <div id="testimonial-slider">
+            <p><em>“I love my custom t-shirt! The print quality is amazing, and the fit is perfect.”</em> — Carla M., Quezon City</p>
+            <p><em>“Marie Custom Goods made a beautiful canvas print for my office. It’s exactly what I envisioned!”</em> — John R., Pasig</p>
+            <p><em>“The custom mug I ordered is fantastic! The colors are vibrant and it’s the perfect gift for my friend. Highly recommend!”</em> — Maria L., Makati</p>
+            <p><em>“Fast shipping and high-quality prints. The custom phone case fits my phone perfectly, and I love the design. Will definitely order again!”</em> — Grace F., Quezon City</p>
+            <p><em>“I was looking for a personalized gift for my sister’s birthday, and the custom t-shirt from Marie Custom Goods was a huge hit! She loved it.”</em> — Joseph D., Parañaque</p>
+        </div>
     </div>
 
     <div class="contact">
