--- a/index.html
+++ b/index.html
@@ -334,34 +334,26 @@
     <main>
     <section class="hero">
         <h1>MARIE CUSTOM GOODS</h1>
-        <p>Your go-to shop for personalized prints & custom products</p>
+        <p>Welcome to Marie Custom Goods! 🎨✨ We’re a creative team dedicated to bringing your custom designs to life. Whether it’s a quirky t-shirt, a personalized mug, or unique office decor, we make it happen.</p>
+        <p>Your go-to shop for personalized prints & custom products!</p>
     </section>
 
     <section class="why-marie" aria-label="Why Print With Us">
-        <h2>Why PRINT with us?</h2>
         <div class="why-marie-content">
             <div class="why-item" tabindex="0">
-                <img src="https://i.ibb.co/0pxHp7H2/1.png" alt="Unlimited Customization" class="why-icon" loading="lazy" width="50" height="50">
-                <h3>Unlimited Customization</h3>
-                <p>Choose from a wide range of products and create your unique design with our easy-to-use online tool. Whether it's text, images, logos, or colors, the possibilities are endless.</p>
+                <img src="https://i.ibb.co/bgbmHg3y/MARIE-CUSTOM-GOODS.png" alt="MARIE GOODS" class="why-icon" loading="lazy" width="100" height="100">
+                <h3>WHO WE ARE</h3>
+                <p>Founded by Marie Rodriguez, a design enthusiast, we started as a hobby and quickly grew into a business that’s passionate about helping you express your individuality through one-of-a-kind products.</p>
             </div>
             <div class="why-item" tabindex="0">
-                <img src="https://i.ibb.co/vxgKxLhn/2.png" alt="Premium Quality Prints" class="why-icon" loading="lazy" width="50" height="50">
-                <h3>Premium Quality Prints</h3>
-                <p>Our prints feature high-definition quality with vibrant colors. We use durable materials, ensuring that your custom items not only look fantastic but last long, even with frequent use.</p>
-            </div>
-            <div class="why-item" tabindex="0">
-                <img src="https://i.ibb.co/7Jch33KP/3.png" alt="Fast Delivery" class="why-icon" loading="lazy" width="50" height="50">
-                <h3>Fast Delivery</h3>
-                <p>We understand the importance of time. That's why we ensure a quick turnaround for all orders. Expect your custom goods to be ready in as little as 48 hours, or sooner if needed.</p>
+                <img src="https://i.ibb.co/bgbmHg3y/MARIE-CUSTOM-GOODS.png" alt="MARIE GOODS" class="why-icon" loading="lazy" width="100" height="100">
+                <h3>OUR MISSION</h3>
+                <p>We want to help you express yourself. Whether it's for your business, a special gift, or just something you’ve dreamed up, we're all about bringing your vision to life with quality prints and super fast service.</p>
             </div>
         </div>
     </section>
 
     <section class="hero">
-        <h2>ABOUT US</h2>
-        <p>Welcome to Marie Custom Goods, where creativity knows no limits! 🎨✨ We’re not just your average printing shop—we're the dream team behind all your wildest custom creations. Whether you want to add a quirky design to your shirt, print your favorite quote on a mug, or make your office pop with personalized posters, we’ve got you covered!</p>
-        <p>Founded by Marie Rodriguez, a self-proclaimed printing enthusiast and design lover, Marie Custom Goods started out as a simple hobby and quickly grew into a full-fledged business dedicated to turning your ideas into reality. We believe everyone deserves to show off their personality through cool, one-of-a-kind products, and we’re here to make that happen.</p>
         <a href="#products" class="cta-button" aria-label="Start Designing">Start Designing</a>
     </section>
 
@@ -478,6 +470,27 @@
             <input type="color" id="custom-color-slipper" value="#ffffff" aria-label="Custom Color for Slipper"/>
             <button class="button" onclick="addToCart('Custom Hotel Slipper', 150.00, document.getElementById('slipper-qty').value, document.getElementById('custom-text-slipper').value, document.getElementById('custom-color-slipper').value)" aria-label="Add Hotel Slipper to Cart">Add to Cart</button>
             <button class="button" onclick="showBulkModal('Custom Hotel Slipper')" aria-label="Request Bulk Discount Hotel Slipper">Request Bulk Discount</button>
+        </div>
+    </section>
+
+    <section class="why-marie" aria-label="Why Print With Us">
+        <h2>Why PRINT with us?</h2>
+        <div class="why-marie-content">
+            <div class="why-item" tabindex="0">
+                <img src="https://i.ibb.co/0pxHp7H2/1.png" alt="Unlimited Customization" class="why-icon" loading="lazy" width="50" height="50">
+                <h3>Unlimited Customization</h3>
+                <p>Choose from a wide range of products and create your unique design with our easy-to-use online tool. Whether it's text, images, logos, or colors, the possibilities are endless.</p>
+            </div>
+            <div class="why-item" tabindex="0">
+                <img src="https://i.ibb.co/vxgKxLhn/2.png" alt="Premium Quality Prints" class="why-icon" loading="lazy" width="50" height="50">
+                <h3>Premium Quality Prints</h3>
+                <p>Our prints feature high-definition quality with vibrant colors. We use durable materials, ensuring that your custom items not only look fantastic but last long, even with frequent use.</p>
+            </div>
+            <div class="why-item" tabindex="0">
+                <img src="https://i.ibb.co/7Jch33KP/3.png" alt="Fast Delivery" class="why-icon" loading="lazy" width="50" height="50">
+                <h3>Fast Delivery</h3>
+                <p>We understand the importance of time. That's why we ensure a quick turnaround for all orders. Expect your custom goods to be ready in as little as 48 hours, or sooner if needed.</p>
+            </div>
         </div>
     </section>
 
