--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="https://i.ibb.co/0pxHp7H2/1.png">
     <meta property="og:url" content="https://mariecustomgoods.com">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="icon" type="image/png" href="https://i.ibb.co/0pxHp7H2/1.png">
+    <link rel="icon" type="image/png" href="https://i.ibb.co/bgbmHg3y/MARIE-CUSTOM-GOODS.png">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org/",
